fix button animations on mobile

--- a/css/hover.css
+++ b/css/hover.css
@@ -2777,9 +2777,9 @@
 }
 .hvr-grow-shadow:hover, .hvr-grow-shadow:focus, .hvr-grow-shadow:active {
   box-shadow: 0 15px 15px -10px rgba(0, 0, 0, 0.15);
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
-}
+  /*-webkit-transform: scale(1.1);*/
+  /*transform: scale(1.1);
+*/}
 
 /* Box Shadow Outset */
 .hvr-box-shadow-outset {
